--- a/home.html
+++ b/home.html
@@ -13,6 +13,15 @@
 <body>
 
 <h1 class="text-danger text-center bg-dark">Welcome to Kenyatta Hospital</h1>
+
+<button class="btn btn-primary">Home</button>
+<button class="btn btn-warning">About</button>
+<button class="btn btn-danger">Contact Us</button>
+<button class="btn btn-outline-success">Services</button>
+<button class="btn btn-outline-dark">Register</button>
+<button class="btn btn-outline-secondary">Log In</button>
+
+
 <p class="text-secondary container"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aliquam aperiam beatae dignissimos eos eum, eveniet fugit incidunt ipsum, itaque iusto labore necessitatibus nihil nisi odit praesentium sapiente ut voluptates!</span><span>Commodi consequatur consequuntur debitis delectus deleniti, distinctio facere, facilis impedit iure magnam nostrum perferendis quaerat quam quas tenetur ullam velit. Culpa distinctio hic omnis quaerat qui reprehenderit sequi. Atque, inventore.</span><span>Deleniti doloribus dolorum, impedit labore molestiae vitae! Atque distinctio dolore est hic non officiis quae vitae. Commodi debitis enim eum facilis fugit iusto libero modi perspiciatis repellendus rerum suscipit, tempora.</span><span>Ab animi deserunt dicta dolores ducimus minus, necessitatibus odit ratione tenetur? Ad aperiam dolore enim excepturi libero modi molestias non pariatur porro totam, vero, voluptate. A earum facere odio sint?</span><span>Accusamus consectetur consequatur dignissimos dolor ea eaque eveniet harum, hic ipsam laboriosam minus, molestiae neque nulla numquam odit provident quaerat quam quo rem sed tenetur, unde ut voluptates. Dolores, natus.</span></p>
 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores at, aut autem corporis ducimus eaque iste labore magni neque nihil nostrum obcaecati quisquam ratione vel veniam, voluptates voluptatibus. Nam, sunt.</span><span>Beatae eligendi eos harum perspiciatis repellendus similique totam unde voluptates! Aperiam assumenda blanditiis consectetur, doloremque ducimus nam nobis provident quis recusandae velit. Atque dolorum, eveniet odit officiis quisquam quo? Soluta.</span><span>Accusamus aperiam asperiores corporis cum cumque dolores dolorum error, est expedita fugiat fugit, harum illum ipsam iste itaque iusto modi non nulla officia placeat possimus quis, reiciendis sint sit velit.</span></p>
 
