--- a/about.html
+++ b/about.html
@@ -69,20 +69,54 @@
 
 </table>
 
-<table>
+<table class="table table-bordered p-5 border-dark ">
     <tr>
         <th>ID</th>
-        <th>Name</th>
+        <th >Name</th>
         <th>Subject</th>
         <th>Marks</th>
+
+    </tr>
+
+
+
+    <tr>
+        <td rowspan="3">1</td>
+        <td rowspan="3">David</td>
+        <td>Maths</td>
+        <td>80</td>
+
     </tr>
 
     <tr>
-        <td>1</td>
-        <td>David</td>
-        <td></td>
-        <td></td>
+        <td>Physics</td>
+        <td> 90</td>
     </tr>
+
+    <tr>
+        <td>Computers</td>
+        <td>70</td>
+    </tr>
+
+    <tr>
+        <td rowspan="4">2</td>
+        <td rowspan="4">Alex</td>
+        <td>Maths</td>
+        <td>80</td>
+
+    </tr>
+     <tr>
+        <td>Physics</td>
+        <td> 70</td>
+    </tr>
+
+    <tr>
+        <td>Computers</td>
+        <td>90</td>
+    </tr>
+
+
+
 </table>
 
 </body>
