--- a/home.html
+++ b/home.html
@@ -15,9 +15,9 @@
 <h1 class="text-danger text-center bg-dark">Welcome to Kenyatta Hospital</h1>
 
 <button class="btn btn-primary">Home</button>
-<button class="btn btn-warning">About</button>
+<a href="about.html"class="btn btn-warning">About</a>
 <button class="btn btn-danger">Contact Us</button>
-<button class="btn btn-outline-success">Services</button>
+<a href="services.html"class="btn btn-outline-success">Services</a>
 <button class="btn btn-outline-dark">Register</button>
 <button class="btn btn-outline-secondary">Log In</button>
 
