--- a/profile.html
+++ b/profile.html
@@ -23,8 +23,8 @@
 
 </div>
 
-
-<div class="card d-flex mt-5" style="width: 400px">
+<div class="d-flex ms-5">
+    <div class="card mt-5" style="width: 400px">
     <img src="static/assets/student.png" alt="">
     <div class="card-body">
           <h2>Student</h2>
@@ -32,16 +32,20 @@
     <button class="btn btn-outline-warning">Login as Student</button>
 
     </div>
+</div>
+
 
 </div>
 
-<div class="card" style="width: 400px">
+<div class="d-flex " style="width: 400px">
+    <div class="card" style="400px">
     <img src="static/assets/parent.png" alt="">
     <div class="card-body">
     <h2>Parent</h2>
     <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet asperiores consequatur cum, esse eum expedita explicabo harum itaque nam nobis omnis quibusdam quo repellat rerum sapiente sequi voluptatem voluptatibus!</span><span>Doloremque libero magnam nihil odio quis quod sequi veniam veritatis. Amet consectetur debitis deleniti inventore ipsa labore qui tempora. Ad aliquam consequatur cupiditate, debitis mollitia perspiciatis quas quibusdam repellat rerum!</span></p>
     <button class="btn btn-outline-primary">Login as Parent</button>
     </div>
+</div>
 
 </div>
 
